--- a/pipes/src/components/Header/header.module.scss
+++ b/pipes/src/components/Header/header.module.scss
@@ -1,7 +1,9 @@
 
 .header {
-    background: transparent;
+    background: white;
     color: #fff;
     font-weight: 700;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+
+
 }
