--- a/pipes/src/components/Footer/footer.module.scss
+++ b/pipes/src/components/Footer/footer.module.scss
@@ -1,4 +1,31 @@
-
 .footer {
     
+    bottom: 0;
+    width: 100%;
+   
+    height: 150px;
+   
+  }
+
+.contacts{
+  display: inline-block;
+
 }
+  
+  .links a {
+  //  display: inline-block;
+    text-decoration: none;
+    color: white;
+    margin: 0.5rem 1rem;
+    letter-spacing: 2px;
+    transition: all 0.3s linear;
+    font-weight: bold;
+  }
+  .links a:hover {
+    color: red;
+  }
+  
+  .copyright {
+    text-transform: capitalize;
+    line-height: 2;
+  }
