--- a/src/components/SimpleHero/banner.module.scss
+++ b/src/components/SimpleHero/banner.module.scss
@@ -8,7 +8,7 @@
     margin-bottom: 2rem;
     padding: 0 1rem;
     letter-spacing: 6px;
-    color: #795aa4;
+    color: #486078;
   }
   .banner p {
     width: 85%;
