--- a/src/atoms/theme/components/footer.scss
+++ b/src/atoms/theme/components/footer.scss
@@ -1,42 +1,85 @@
 .footer {
     bottom: 0;
     width: 100%;
-    height: 155px;
-    background: #7269a7a3;
+    height: 175px;
+   // margin-top: auto;
+    background: #5a5d60;
     display: flex;
+    //flex-direction: column;
     justify-content: center;
     align-items: center;
-    //height: 72px;
     color: #fff;
     text-align: center;
     font-size: 14px;
     font-weight: 500;
-    p {
-        display: block;
-        margin: 0.1rem 12rem;;
+    //flex-shrink: 0;
+    overflow: none; 
+
+    .box{
+      flex: 1;
+    }
+   
+     .info{
+      display: inline-block;
+      margin: 1.4rem  8rem;
+      flex-direction: column;
+     }
+     
+    .info p {
         font-weight: 600;
-        color: #d3d3d378;
+        color: white;
+        margin: 0.1rem;
     }
     
-    a {
-        display: block;
+    .links{
+        display: inline-block;
+        margin: 0.3rem 19rem;
+        flex-direction: column;
+    }
+   
+   .links a {
+        margin: 0.1;
         text-decoration: none;
         color: white;
-        margin: 0.6rem 3.5rem;
         transition: all 0.3s linear;
         font-weight: bold;
       }
       
-      a:hover {
+     .link a:hover {
         color: red;
       }
-    
+
+
+      .copyright {
+        display: inline-block;
+        position: relative;
+        color: white;
+        width: 100%;
+        padding: 0.3rem;
+      //  margin: 0.1rem 0rem 0rem 0rem;
+        background-color: black;
+        line-height: 2;
+    }
 }
 
 
-.footer-gatsby {
+
+
+
+@media (max-width: 400px) {
+  .copyright {
+    color: black;
+   
+}
+   
+}
+
+@media (min-width: 768px) {
+  .copyright {
     color: black;
    
 }
 
-
+  
+  
+}
