--- a/src/atoms/theme/index.scss
+++ b/src/atoms/theme/index.scss
@@ -6,21 +6,28 @@
 @import url('../../components/SimpleHero/banner.module.scss');
 //@import url('../../components/SimpleHero/hero.module.scss');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 
 body {
     font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
-    //background-position: center;
+    background-position: center;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
     text-align: center;
-   // color: #35495E;
+    color: #35495E;
     margin: 0;
     padding: 0;
 }
 
 .hero{
-    background-image:  linear-gradient(rgba(128, 0, 128, 0.3), rgba(0, 0, 0, 0.2)), url('../../images/whiteboard-849811.jpg');
+    //background-image:  linear-gradient(rgba(128, 0, 128, 0.3), rgba(0, 0, 0, 0.2)), url('../../images/whiteboard-849811.jpg');
+    background-image:  linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../images/whiteboard-849811.jpg');
     background-repeat: no-repeat;
      -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -28,9 +35,11 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    position: relative;
     min-height: calc(100vh - 62px);
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
    
@@ -39,9 +48,9 @@ body {
 
 .mainContainer {
     min-height: 84vh;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+   // display: flex;
+    flex: 1 ;
+    //flex-direction: column;
     align-content: center;
     justify-content: center;
     color: #fff;
@@ -50,7 +59,7 @@ body {
         padding-top: 80px;
         text-transform: uppercase;
         font-weight: 800;
-        color: #795aa4;
+        color:#486078;
     }
     h5 {
         color: #181516;
@@ -65,26 +74,29 @@ body {
     border-radius: 50%;
     padding: 2px;
 }
+
+
 //  .gatsby-square {
 //     margin-top: 80px;
 //     padding: 0 30 50px;
 //    border-radius: 15px;
 // }
 
-@media(max-width: 767px) {
-    .gatsby-square {
-        margin-top: 20px;
-    }
-}
+// @media(max-width: 767px) {
+//     .gatsby-square {
+//         margin-top: 20px;
+//     }
+// }
 
 @media (max-width: 400px) {
     body{
         flex-direction: row;
         flex: 1;
-        background-color: black;
+        background: #5a5d60;
+        overflow: auto;
     }
     .hero { 
-        background-image: linear-gradient(rgba(128, 0, 128, 0.3), rgba(0, 0, 0, 0.2)), url('../../images/whiteboard-849811.jpg');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../images/whiteboard-849811.jpg');
         display: inline;
      }
 }
@@ -97,6 +109,7 @@ body {
     }
     .mainContainer {
       flex: 1;
+      flex-direction: row;
     }
     
   }
