--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,31 +1,4 @@
-// .footer {
-    
-//     bottom: 0;
-//     width: 100%;
-   
-//     height: 150px;
-   
-//   }
-
-// .contacts{
-//   display: inline-block;
-
-// }
+ .footer {
+    background-color: #5a5d60;
+ }
   
-//   .links a {
-//     display: block;
-//     text-decoration: none;
-//     color: white;
-//     margin: 0.5rem 1rem;
-//     letter-spacing: 2px;
-//     //transition: all 0.3s linear;
-//     font-weight: bold;
-//   }
-//   .links a:hover {
-//     color: red;
-//   }
-  
-//   .copyright {
-//     text-transform: capitalize;
-//     line-height: 2;
-//   }
